--- a/WeddingPlanner/WeddingPlanner.csproj
+++ b/WeddingPlanner/WeddingPlanner.csproj
@@ -219,9 +219,13 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Caterer.cs" />
+    <Compile Include="Models\Celebrant.cs" />
     <Compile Include="Models\Couple.cs" />
     <Compile Include="Models\DJ.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Photographer.cs" />
+    <Compile Include="Models\Venue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
