--- a/WeddingPlanner/WeddingPlanner.csproj
+++ b/WeddingPlanner/WeddingPlanner.csproj
@@ -225,7 +225,10 @@
     <Compile Include="Models\DJ.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Photographer.cs" />
+    <Compile Include="Models\ServiceContract.cs" />
+    <Compile Include="Models\VendorPackage.cs" />
     <Compile Include="Models\Venue.cs" />
+    <Compile Include="Models\WeddingPackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
