--- a/WeddingPlanner/WeddingPlanner.csproj
+++ b/WeddingPlanner/WeddingPlanner.csproj
@@ -212,11 +212,30 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CaterersController.cs" />
+    <Compile Include="Controllers\CelebrantsController.cs" />
+    <Compile Include="Controllers\CouplesController.cs" />
+    <Compile Include="Controllers\DJsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PhotographersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\VenuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001201424179_initial.cs" />
+    <Compile Include="Migrations\202001201424179_initial.Designer.cs">
+      <DependentUpon>202001201424179_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202001201431464_add new property to venue.cs" />
+    <Compile Include="Migrations\202001201431464_add new property to venue.Designer.cs">
+      <DependentUpon>202001201431464_add new property to venue.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202001201445191_changed name of venue prop.cs" />
+    <Compile Include="Migrations\202001201445191_changed name of venue prop.Designer.cs">
+      <DependentUpon>202001201445191_changed name of venue prop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Caterer.cs" />
@@ -321,6 +340,17 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202001201424179_initial.resx">
+      <DependentUpon>202001201424179_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001201431464_add new property to venue.resx">
+      <DependentUpon>202001201431464_add new property to venue.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001201445191_changed name of venue prop.resx">
+      <DependentUpon>202001201445191_changed name of venue prop.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
