made changes to Models Venue and WeddingPackage, some of the datatypes were changed to Dictionary.

--- a/WeddingPlanner/WeddingPlanner.csproj
+++ b/WeddingPlanner/WeddingPlanner.csproj
@@ -235,6 +235,10 @@
     <Compile Include="Migrations\202001201445191_changed name of venue prop.Designer.cs">
       <DependentUpon>202001201445191_changed name of venue prop.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001201515353_add venue to table.cs" />
+    <Compile Include="Migrations\202001201515353_add venue to table.Designer.cs">
+      <DependentUpon>202001201515353_add venue to table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -350,6 +354,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202001201445191_changed name of venue prop.resx">
       <DependentUpon>202001201445191_changed name of venue prop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001201515353_add venue to table.resx">
+      <DependentUpon>202001201515353_add venue to table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
