add views to vendor controller

--- a/WeddingPlanner/WeddingPlanner.csproj
+++ b/WeddingPlanner/WeddingPlanner.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CaterersController.cs" />
     <Compile Include="Controllers\CelebrantsController.cs" />
+    <Compile Include="Controllers\Couples1Controller.cs" />
     <Compile Include="Controllers\CouplesController.cs" />
     <Compile Include="Controllers\DJsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -223,21 +224,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202001201424179_initial.cs" />
-    <Compile Include="Migrations\202001201424179_initial.Designer.cs">
-      <DependentUpon>202001201424179_initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202001201445191_changed name of venue prop.cs" />
-    <Compile Include="Migrations\202001201445191_changed name of venue prop.Designer.cs">
-      <DependentUpon>202001201445191_changed name of venue prop.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202001202201571_venue.cs" />
-    <Compile Include="Migrations\202001202201571_venue.Designer.cs">
-      <DependentUpon>202001202201571_venue.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202001211432334_reseeding.cs" />
-    <Compile Include="Migrations\202001211432334_reseeding.Designer.cs">
-      <DependentUpon>202001211432334_reseeding.cs</DependentUpon>
+    <Compile Include="Migrations\202001211447516_add all models.cs" />
+    <Compile Include="Migrations\202001211447516_add all models.Designer.cs">
+      <DependentUpon>202001211447516_add all models.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -315,6 +304,11 @@
     <Content Include="Views\Caterer.cshtml" />
     <Content Include="Views\Celebrant.cshtml" />
     <Content Include="Views\Photographer.cshtml" />
+    <Content Include="Views\Couples1\Create.cshtml" />
+    <Content Include="Views\Couples1\Delete.cshtml" />
+    <Content Include="Views\Couples1\Details.cshtml" />
+    <Content Include="Views\Couples1\Edit.cshtml" />
+    <Content Include="Views\Couples1\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -349,17 +343,8 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202001201424179_initial.resx">
-      <DependentUpon>202001201424179_initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202001201445191_changed name of venue prop.resx">
-      <DependentUpon>202001201445191_changed name of venue prop.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202001202201571_venue.resx">
-      <DependentUpon>202001202201571_venue.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202001211432334_reseeding.resx">
-      <DependentUpon>202001211432334_reseeding.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202001211447516_add all models.resx">
+      <DependentUpon>202001211447516_add all models.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
