--- a/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
+++ b/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
@@ -178,9 +178,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202001221409134_shalini.cs" />
-    <Compile Include="Migrations\202001221409134_shalini.Designer.cs">
-      <DependentUpon>202001221409134_shalini.cs</DependentUpon>
+    <Compile Include="Migrations\202001222124488_changed model.cs" />
+    <Compile Include="Migrations\202001222124488_changed model.Designer.cs">
+      <DependentUpon>202001222124488_changed model.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -286,8 +286,8 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202001221409134_shalini.resx">
-      <DependentUpon>202001221409134_shalini.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202001222124488_changed model.resx">
+      <DependentUpon>202001222124488_changed model.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
