--- a/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
+++ b/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
@@ -182,6 +182,10 @@
     <Compile Include="Migrations\202001270128064_models.Designer.cs">
       <DependentUpon>202001270128064_models.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001270406458_change prop.cs" />
+    <Compile Include="Migrations\202001270406458_change prop.Designer.cs">
+      <DependentUpon>202001270406458_change prop.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\WeddingPackageViewModel.cs" />
@@ -276,6 +280,9 @@
     <Content Include="Views\Couples\PackageDetails.cshtml" />
     <Content Include="Views\Couples\EditPackage.cshtml" />
     <Content Include="Views\Couples\DeletePackage.cshtml" />
+    <Content Include="Views\Couples\ShowPendingContracts.cshtml" />
+    <Content Include="Views\Vendors\ShowPendingContracts.cshtml" />
+    <Content Include="Views\Couples\ConfirmContract.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -296,6 +303,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202001270128064_models.resx">
       <DependentUpon>202001270128064_models.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001270406458_change prop.resx">
+      <DependentUpon>202001270406458_change prop.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
