made delete method for service contract

--- a/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
+++ b/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
@@ -284,6 +284,8 @@
     <Content Include="Views\Vendors\ShowPendingContracts.cshtml" />
     <Content Include="Views\Couples\ConfirmContract.cshtml" />
     <Content Include="Views\Vendors\ConfirmContract.cshtml" />
+    <Content Include="Views\Couples\DeleteContract.cshtml" />
+    <Content Include="Views\Vendors\DeleteContract.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
