made bookkeeping method

--- a/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
+++ b/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
@@ -286,6 +286,7 @@
     <Content Include="Views\Vendors\ConfirmContract.cshtml" />
     <Content Include="Views\Couples\DeleteContract.cshtml" />
     <Content Include="Views\Vendors\DeleteContract.cshtml" />
+    <Content Include="Views\Vendors\Bookkeeping.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
