--- a/WeddingPlanner/WeddingPlanner.csproj
+++ b/WeddingPlanner/WeddingPlanner.csproj
@@ -227,9 +227,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202001270658403_finalMigration.cs" />
-    <Compile Include="Migrations\202001270658403_finalMigration.Designer.cs">
-      <DependentUpon>202001270658403_finalMigration.cs</DependentUpon>
+    <Compile Include="Migrations\202001271319104_models.cs" />
+    <Compile Include="Migrations\202001271319104_models.Designer.cs">
+      <DependentUpon>202001271319104_models.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -341,8 +341,8 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202001270658403_finalMigration.resx">
-      <DependentUpon>202001270658403_finalMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202001271319104_models.resx">
+      <DependentUpon>202001271319104_models.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
