--- a/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
+++ b/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
@@ -178,9 +178,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202001270659533_finalone.cs" />
-    <Compile Include="Migrations\202001270659533_finalone.Designer.cs">
-      <DependentUpon>202001270659533_finalone.cs</DependentUpon>
+    <Compile Include="Migrations\202001271320474_model.cs" />
+    <Compile Include="Migrations\202001271320474_model.Designer.cs">
+      <DependentUpon>202001271320474_model.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -283,6 +283,7 @@
     <Content Include="Views\Couples\DeleteContract.cshtml" />
     <Content Include="Views\Vendors\DeleteContract.cshtml" />
     <Content Include="Views\Vendors\Bookkeeping.cshtml" />
+    <Content Include="Views\Couples\GetVendorPackages.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -301,8 +302,8 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202001270659533_finalone.resx">
-      <DependentUpon>202001270659533_finalone.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202001271320474_model.resx">
+      <DependentUpon>202001271320474_model.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
