--- a/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
+++ b/WeddingPlannerApp/WeddingPlannerApp/WeddingPlannerApp.csproj
@@ -178,9 +178,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202001271320474_model.cs" />
-    <Compile Include="Migrations\202001271320474_model.Designer.cs">
-      <DependentUpon>202001271320474_model.cs</DependentUpon>
+    <Compile Include="Migrations\202001271407044_present.cs" />
+    <Compile Include="Migrations\202001271407044_present.Designer.cs">
+      <DependentUpon>202001271407044_present.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -302,8 +302,8 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202001271320474_model.resx">
-      <DependentUpon>202001271320474_model.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202001271407044_present.resx">
+      <DependentUpon>202001271407044_present.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
